--- a/html/index.tmpl
+++ b/html/index.tmpl
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en"> <!-- fa en-US -->
 <head>
-	{{{ link-modulepreload }}}
+	${ c['link-modulepreload'] }
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0" />
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
-	{{{ link-stylesheet }}}
+	${ c['link-stylesheet'] }
 	<title>Stack5 Boilerplate</title>
 </head>
 <body>
@@ -14,8 +14,8 @@
 		<div data-root="comp2"></div>
 	</div>
 	
-	{{{ script-lib }}}
+	${ c['script-lib'] }
 	
-	{{{ script-app }}}
+	${ c['script-app'] }
 </body>
 </html>
